<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99aacc"
    tools:context=".Registration">

    <TextView
        android:id="@+id/textIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/RegistrateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:hint="@string/login"
        android:textColorHint="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/RegistrBtnText"
        android:textColorHighlight="#111111"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <TextView
        android:id="@+id/AuthBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/AuthBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButton" />

</androidx.constraintlayout.widget.ConstraintLayout>